<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <androidx.percentlayout.widget.PercentRelativeLayout
                android:id="@+id/hole_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/layout_img_background_first"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageView

                        android:id="@+id/img_background_first"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_background_inscription_first_part" />


                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/logo" />
                </RelativeLayout>

                <RelativeLayout

                    android:id="@+id/contView"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/layout_img_background_first"
                    android:background="@drawable/ic_background_inscription_second"
                    android:padding="5dp">


                    <LinearLayout
                        android:id="@+id/layout_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/segoe_ui_bold"
                            android:text="@string/se_connecter"
                            android:textColor="@color/white"
                            android:textSize="25dp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_title"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="40dp"
                        android:background="@drawable/background_clear_white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="30dp">

                        <RelativeLayout
                            android:id="@+id/layoutUsername"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/background_raduis"
                            android:paddingLeft="10dp">

                            <LinearLayout
                                android:id="@+id/logoUsername"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center"
                                    android:layout_marginRight="10dp"
                                    android:src="@drawable/user" />

                                <View
                                    android:layout_width="1dp"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:background="@color/grey"
                                    android:padding="5dp" />
                            </LinearLayout>

                            <EditText
                                android:id="@+id/email_et"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="30dp"
                                android:layout_toEndOf="@+id/logoUsername"
                                android:background="@color/white"
                                android:fontFamily="@font/segoe_ui"
                                android:hint="@string/Email"
                                android:inputType="textEmailAddress"
                                android:textAlignment="textStart"
                                android:textSize="13sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/layoutPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_below="@+id/layoutUsername"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/background_raduis"
                            android:fontFamily="@font/segoe_ui"
                            android:paddingLeft="10dp">

                            <LinearLayout
                                android:id="@+id/logoPassword"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center"
                                    android:layout_marginRight="10dp"
                                    android:src="@drawable/password" />

                                <View
                                    android:layout_width="1dp"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:background="@color/grey"
                                    android:padding="5dp" />
                            </LinearLayout>

                            <EditText
                                android:id="@+id/pwd_et"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_toStartOf="@+id/btnShowPassword"
                                android:layout_toEndOf="@+id/logoPassword"
                                android:background="@color/white"
                                android:hint="@string/motDePasse"
                                android:inputType="textPassword"
                                android:textAlignment="textStart"
                                android:textSize="13sp" />

                            <ImageView
                                android:id="@+id/btnShowPassword"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/invisble" />
                        </RelativeLayout>


                        <TextView
                            android:id="@+id/forgottenPwd_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/layoutPassword"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/segoe_ui"
                            android:gravity="end"
                            android:text="@string/motDePassOublié"
                            app:autoSizeMaxTextSize="12sp"
                            app:autoSizeMinTextSize="5sp"
                            app:autoSizeStepGranularity="0.5sp"
                            app:autoSizeTextType="uniform" />


                        <Button
                            android:id="@+id/login_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/background_button_blue_raduis"
                            android:fontFamily="@font/segoe_ui_bold"
                            android:text="@string/btnConnexion" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="50dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/segoe_ui"
                                android:text="@string/incritptionQuestion"
                                app:autoSizeMaxTextSize="12sp"
                                app:autoSizeMinTextSize="5sp"
                                app:autoSizeStepGranularity="0.5sp"
                                app:autoSizeTextType="uniform" />

                            <TextView
                                android:id="@+id/inscription_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/inscriptionLink"
                                android:textColor="@color/red"
                                app:autoSizeMaxTextSize="12sp"
                                app:autoSizeMinTextSize="5sp"
                                app:autoSizeStepGranularity="0.5sp"
                                app:autoSizeTextType="uniform" />
                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>

            </androidx.percentlayout.widget.PercentRelativeLayout>
        </ScrollView>
    </androidx.percentlayout.widget.PercentRelativeLayout>
</layout>